Implement initial features
1. Add api key properties
2. Implement RestTemplate to make an API call to get weather data

--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+weather.api-key=1d422b242bc5c8f7be6e5d8f257730be
