--- a/weather/src/main/resources/application.properties
+++ b/weather/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 weather.api-key=1d422b242bc5c8f7be6e5d8f257730be
